--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse " id="navbarToggler">
-        <input class="form-control mr-sm-2 ml-auto my-2 my-lg-0" type="text" name="search" placeholder="Buscar por tema..." v-model="search" id="search">
+      <div class="collapse navbar-collapse" id="navbarToggler">
+        <input class="form-control mr-sm-2 ml-auto  my-2 my-lg-0" type="text" name="search" placeholder="Search by title" v-model="search" id="search">
         <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
           <li class="nav-item active">
             <a class="nav-link text-white" href="#" data-toggle="modal" data-target="#references">Help</a>
