--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <div id="app" class="d-flex flex-column justify-content-between">
-    <nav class="navbar  navbar-light bg-dark navbar-expand-md sticky-top">
+    <nav class="navbar  navbar-light bg-dark navbar-expand-md">
       <a class="navbar-brand mr-4" href="">
         <img id="logo-sm" class="d-none d-sm-inline" src="img/title.png" alt="logo">
         <img id="logo" class="d-sm-none" src="img/smalltitle.png" alt="logo">
@@ -40,12 +40,17 @@
 
     <main class="m-0 flex-grow-1 d-flex flex-wrap align-items-center justify-content-center bg-light">
 
-       <component :is="current" :array="pages" :var="dialog" :labels="database"></component>
+       <component :is="current" :array="pages" :var="dialog" :labels="filterTitle"></component>
 
     </main>
 
     <footer class="bg-dark text-white text-center p-1">
-      <p>"Team MIL3R - &#x1F1E6;&#x1F1F7; - &copy; 2020"</p>
+      <p id="team">"Team MIL3R - &#x1F1E6;&#x1F1F7; - &copy; 2020"</p>
+      <div id="nav" class="d-none justify-content-around align-items-center bg-dark p-1"> 
+        <img src="img/htmlimage.png" id="html" height="80%" onclick="app.html()">
+        <img src="img/cssimage.png" id="css" height="80%" onclick="app.css()">
+        <img src="img/jsimage.png" id="js" height="80%" onclick="app.js()">
+      </div>
   </footer>
   
 
